Fixing contextual help bugs with field alignment

--- a/resources/assets/css/cp.css
+++ b/resources/assets/css/cp.css
@@ -1711,10 +1711,12 @@
 
 
 .add-on {
-	display: table;
 	border-collapse: collapse;
 	vertical-align: top;
 	margin-bottom: 20px;
+	display: inline-block;
+	float: left;
+	max-width: 70%;
 	width: 70%;
 }
 
@@ -1763,12 +1765,12 @@
 	width: 100%;
 }
 
-.inline .add-on {
+/*.inline .add-on {
 	display: inline-block;
 	float: left;
 	max-width: 70%;
 	width: 70%;
-}
+}*/
 
 table .add-on p {
 	font-size: 15px;
@@ -1976,31 +1978,19 @@ table .add-on p {
 }
 
 
-/*.field.inline .help {
+.field.inline .help {
 	margin-top: 0;
 }
 
 .field.inline .help .description {
 	top: -10px;
-	left: 10px;
+	left: 20px;
 
 }
 
 .field.inline .help .long {
 	top: -10px;
 }
-
-.inline .field .help .description {
-	left: 260px;
-	z-index: 999;
-	width: 100%;
-
-}
-
-table .inline .field .help .description {
-	top: 22px;
-	margin-left: 4%;
-}*/
 
 
 /* File Manager
